--- a/index.html
+++ b/index.html
@@ -303,15 +303,15 @@ img#impresoraButton {
      <div id="thermal-pos">
         
         <div class="label">
-             <img class="boton" src="Estaciones.png" class="ImganelLogo" width= "45%" id "foto">
+             <img class="boton" src="lagotaa.png" class="ImganelLogo" width= "45%" id "foto">
             <br/>
             <p class="info-tienda">
-                Av Pero Venturo 224 Urb. Higuereta-Surco
+                Calle Galicia #148-Surco (Altura de la cdra.5 de Pedro Venturo)
                 <br>
                 HORARIO DE ATENCIÓN:
                 <br>
                 LUNES A SABADO 
-              9:00 AM - 9:00 PM
+              9:00 AM - 7:00 PM
    
                 <br>
             </p>
