--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ img#impresoraButton {
      <div id="thermal-pos">
         
         <div class="label">
-             <img class="boton" src="lagotaa.png" class="ImganelLogo" width= "45%" id "foto">
+             <img class="boton" src="lagota.png" class="ImganelLogo" width= "45%" id "foto">
             <br/>
             <p class="info-tienda">
                 Calle Galicia #148-Surco (Altura de la cdra.5 de Pedro Venturo)
