--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@ img#impresoraButton {
             <p class="info-tienda">
                 Calle Galicia #148-Surco (Altura de la cdra.5 de Pedro Venturo)
                 <br>
+             Teléf: 988684252 / 01 267-8569
+                <br>
                 HORARIO DE ATENCIÓN:
                 <br>
                 LUNES A SABADO 
@@ -476,8 +478,7 @@ document.getElementById('impresoraButton').addEventListener('click', printTicket
         <br/>
         <div class="policy">
             <p class="policy-title">
-                <b>La sola aceptación del presente documento implica la
-aceptación de las condiciones siguientes::</b>
+                <b>NOTA:</b>
             </p>
         
             <p class="m-0">
